@@ -1,3 +1,13 @@
 # TestTaskElgSys
 
+В данный момент программу можно корректно запустить только через IDE.
+Механизм отправки сообщений требует наличия дополнительного параметра (`--add-modules=java.activation`) для VM (смотри *картинка 1*)
+На всякий случай проверьте подключен ли javax.mail.jar (смотри *картинку 2*)
+
 ![giphy](https://user-images.githubusercontent.com/31689842/42897012-552b8ca2-8ac7-11e8-953a-e159c3eaf5ba.gif)
+
+**Картинка 1**
+![default](https://user-images.githubusercontent.com/31689842/42899666-6c018e24-8acf-11e8-8469-584984de09a1.png)
+
+**Картинка 2**
+![default](https://user-images.githubusercontent.com/31689842/42900003-6cd6a1d0-8ad0-11e8-8a2b-1ff003b798ec.png)
